apps/staging/affine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: affine.localtest.me  # Update this to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 3010
